css/style.css
:root {
    /* fluid font sizes, margins, and padding */
    --step-0: clamp(0.81rem, calc(0.74rem + 0.37vw), 1.00rem);
    --step-1: clamp(0.98rem, calc(0.87rem + 0.54vw), 1.25rem);
    --step-2: clamp(1.17rem, calc(1.02rem + 0.77vw), 1.56rem);
    --step-3: clamp(1.40rem, calc(1.19rem + 1.07vw), 1.95rem);
    --step-4: clamp(1.69rem, calc(1.39rem + 1.48vw), 2.44rem);
    --step-5: clamp(2.02rem, calc(1.62rem + 2.01vw), 3.05rem);
    --step-6: clamp(2.43rem, calc(1.88rem + 2.71vw), 3.82rem);
    --step-7: clamp(2.91rem, calc(2.19rem + 3.62vw), 4.77rem);
    --step-8: clamp(3.49rem, calc(2.53rem + 4.81vw), 5.96rem);
    --step-9: clamp(4.19rem, calc(2.92rem + 6.36vw), 7.45rem);
  
    /* fallback font */
    --system-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

@font-face {
    font-family: aquire;
    src: url(../font/AquireLight-YzE0o.otf);
    font-display: swap;
}

@font-face {
    font-family: ubuntu;
    src: url(../font/Ubuntu-Regular.ttf);
    font-display: swap;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: var(--system-font);
}

a {
    text-decoration: none;
    color: #14b8a6;
    cursor: pointer;
}

a:hover {
    color: #2dd4bf;
}

body {
    font-family: ubuntu;
    background-color: #f1f5f9;
    padding-inline: clamp(0.47rem, calc(0.45rem + 0.08vw), 0.51rem);
}

header {
    font-family: aquire;
    font-size: var(--step-5);
    font-weight: bold;
    text-align: center;
    padding-block: 16px;
}

/* header section */
.header-section {
    background-color: white;
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding-top: 24px;
    padding-bottom: 16px;
    padding-inline: 24px;
    border-radius: 16px;
    box-shadow: 4px 4px 4px #e2e8f0;
}

/* profile section */
.current-profile {
    display: flex;
    cursor: pointer;
}

.jesse-martin-avatar {
    border-radius: 6em;
    height: 60px;
}

.profile-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.profile-info > span {
    font-size: var(--step-3);
}

/* actions section */
.action {
    place-self: center;
    display: flex;
    gap: 8px;
    flex-wrap: wrap;
}

.action > button {
    background-color: #2dd4bf;
    border: none;
    padding-block: 8px;
    width: 80px;
    border-radius: 3em;
    color: #f0fdfa;
    cursor: pointer;
    font-size: var(--step-0);
}

/* main section */
/* projects section */
.your-projects {
    display: flex;
    flex-direction: column;
    gap: var(--step-1);
    place-items: center;
}

.your-projects > h3,
.announcement > h3,
.trending > h3 {
    padding-top: 16px;
    padding-bottom: 4px;
}

.cards {
    width: 99%;
    height: 180px;
    background-color: white;
    border-radius: 16px;
    box-shadow: 4px 4px 4px #e2e8f0;
}

/* announcement section */
.announcement {
    display: flex;
    flex-direction: column;
    place-items: center;
}

.announcement-items {
    background-color: white;
    padding: 16px;
    width: 99%;
    border-radius: 16px;
    box-shadow: 4px 4px 4px #e2e8f0;
}

.announcement-items > div > p {
    font-size: var(--step-1);
}

/* trending section */
.trending {
    display:flex;
    flex-direction: column;
    place-items: center;
}

.trending-items {
    background-color: white;
    padding: 16px;
    width: 99%;
    border-radius: 16px;
    box-shadow: 4px 4px 4px #e2e8f0;
}

.trending-items > .item1,
.trending-items > .item2,
.trending-items > .item3,
.trending-items > .item4 {display: flex;}

.trending-info{
    display: flex;
    flex-direction: column;
    place-content: center;
}

.trending-items > div > img {
    border-radius: 6em;
    height: 50px;
}

/* navigation menu */
/* search */
form[id='search'] {
    display: flex;
    border-radius: 3em;
    width: 70vw;
    font-size: var(--step-2);
    height: var(--step-5);
    align-items: center;
}

form, input {
    background-color: #ccfbf1;
    outline: none;
    border: none;
    width: 50vw;
    padding-left: 8px;
}

.search-icon-wrapper {
    display: flex;
    height: var(--step-4);
    width: var(--step-4);
    justify-content: end;
    align-items: end;
}

.search-icon {
    opacity: 0.6;
    height: var(--step-2);
    width: var(--step-2);
}

nav {
    background-color: #14b8a6;
    padding-inline: 16px;
    padding-block: var(--step-6);
    width: 80vw;
    border-radius: 0px 16px 16px 0px;
    display: flex;
    flex-direction: column;
    gap: clamp(3.49rem, calc(-10.12rem + 68.05vw), 38.37rem);
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    display: none;
}

li {
    list-style: none;
    font-weight: bold;
    font-size: clamp(1.40rem, calc(0.86rem + 2.74vw), 2.81rem);
    color: white;
}

.nav1 > ul,
.nav2 > ul{
    display: flex;
    flex-direction: column;
    gap: clamp(1.40rem, calc(-2.00rem + 17.03vw), 10.13rem);
    padding-left: var(--step-3);
}

.nav1 > ul {
    padding-top: clamp(1.69rem, calc(-2.60rem + 21.42vw), 12.67rem);
}

